minor fix on text alignment for FeaturedComponent

--- a/src/app/css-styles/FeaturedComponent.module.css
+++ b/src/app/css-styles/FeaturedComponent.module.css
@@ -32,6 +32,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   font-size: 2vw;
   transition: background-color 0.5s ease, opacity 0.5s ease;
 }
@@ -54,6 +55,8 @@
   position: relative;
   opacity: 0;
   transition: opacity 0.5s ease;
+  text-align: center; 
+  white-space: normal; 
 }
 
 /* Hover effect on the box */
